exports[`test renders loading 1`] = `
<div>
  <Connect(SplitContainerWithoutData)>
    <Right
      classes={
        Array [
          "background--left",
        ]
      }
      mobile={false} />
  </Connect(SplitContainerWithoutData)>
  <Left
    classes={
      Array [
        "background--light-secondary",
      ]
    }
    scroll={true}>
    <div
      className="soft-double text-center">
      <Loading />
    </div>
  </Left>
</div>
`;

exports[`test renders with props 1`] = `
<div>
  <Connect(SplitContainerWithoutData)>
    <Right
      classes={
        Array [
          "background--left",
        ]
      }
      mobile={false}>
      <ControllableWrapper
        autoCenter={true}
        markers={
          Array [
            Object {
              "latitude": 2,
              "longitude": 2,
            },
          ]
        } />
    </Right>
  </Connect(SplitContainerWithoutData)>
  <Left
    classes={
      Array [
        "background--light-secondary",
      ]
    }
    scroll={true}>
    <Layout
      group={
        Object {
          "entityId": "1",
          "locations": Array [
            Object {
              "location": Object {
                "latitude": 2,
                "longitude": 2,
              },
            },
          ],
          "members": Array [
            Object {
              "role": "default",
            },
            Object {
              "role": "leader",
            },
          ],
          "photo": "http://test.com/test.jpg",
        }
      }
      isLeader={1}
      join={[Function]}
      leaders={
        Array [
          Object {
            "role": "leader",
          },
        ]
      } />
  </Left>
</div>
`;

exports[`test renders without map on mobile 1`] = `
<div>
  <Connect(SplitContainerWithoutData)>
    <Right
      classes={
        Array [
          "background--left",
        ]
      }
      mobile={false} />
  </Connect(SplitContainerWithoutData)>
  <Left
    classes={
      Array [
        "background--light-secondary",
      ]
    }
    scroll={true}>
    <Layout
      group={
        Object {
          "entityId": "1",
          "locations": Array [
            Object {
              "location": Object {
                "latitude": 2,
                "longitude": 2,
              },
            },
          ],
          "members": Array [
            Object {
              "role": "default",
            },
            Object {
              "role": "leader",
            },
          ],
          "photo": "http://test.com/test.jpg",
        }
      }
      isLeader={1}
      join={[Function]}
      leaders={
        Array [
          Object {
            "role": "leader",
          },
        ]
      } />
  </Left>
</div>
`;

exports[`test renders without map on server 1`] = `
<div>
  <Connect(SplitContainerWithoutData)>
    <Right
      classes={
        Array [
          "background--left",
        ]
      }
      mobile={false} />
  </Connect(SplitContainerWithoutData)>
  <Left
    classes={
      Array [
        "background--light-secondary",
      ]
    }
    scroll={true}>
    <Layout
      group={
        Object {
          "entityId": "1",
          "locations": Array [
            Object {
              "location": Object {
                "latitude": 2,
                "longitude": 2,
              },
            },
          ],
          "members": Array [
            Object {
              "role": "default",
            },
            Object {
              "role": "leader",
            },
          ],
          "photo": "http://test.com/test.jpg",
        }
      }
      isLeader={1}
      join={[Function]}
      leaders={
        Array [
          Object {
            "role": "leader",
          },
        ]
      } />
  </Left>
</div>
`;

exports[`test should contain a group mutation 1`] = `
"mutation AddToGroup($groupId: ID!, $message: String!, $communicationPreference: String!) {
  requestGroupInfo(groupId: $groupId, message: $message, communicationPreference: $communicationPreference) {
    error
    success
    code
  }
}
"
`;

exports[`test should contain a phone number mutation 1`] = `
"mutation SetPhoneNumber($phoneNumber: String!) {
  setPhoneNumber(phoneNumber: $phoneNumber) {
    error
    success
    code
  }
}
"
`;
